possible fix to the weird charset issue on moni's computer; tablet spacing fixed

--- a/rh/static/css/about.less
+++ b/rh/static/css/about.less
@@ -193,6 +193,10 @@ body.about {
 
       .left-side, .right-side {
         margin: 0px auto 60px;
+
+        @media only screen and (min-width: 768px) and (max-width: 959px) {
+          margin: auto 10px;
+        }
       }
 
       .about-copy {
